--- a/index.html
+++ b/index.html
@@ -838,9 +838,8 @@
 
         <div class="page-header">
 
-            <h3>Home
-
-            </h3>
+          <h3>Energy Measure Ontology</h3>
+          <p><span data-contrast="none">The Energy Measure Ontology module describes properties related to the energy measures : electric energy consumption, electric energy load,  power, thermal energy, electric energy production, and a set of subclasses of seas:Evaluation to register the values of the energy measurements properties and their temporal contexts.</span></p>
 
         </div>
 
